--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ app/views/devise/shared/_error_messages.html.erb:Zone.Identifier
 app/views/devise/shared/_link.html.erb:Zone.Identifier
 public/100174297-7e01e380-2f0f-11eb-8e68-bd07ea193dd1.png:Zone.Identifier
 public/100174297-7e01e380-2f0f-11eb-8e68-bd07ea193dd1.pngZone.Identifier
+*.Identifier
